# pageloot

./: .env.sample  .pre-commit-config.yaml  README.md  pyproject.toml
config/: settings.py  urls.py
expenses/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
expenses/migrations/: 0001_initial.py  0002_user_alter_expense_user.py  0003_expense_created_at_expense_updated_at_and_more.py
